--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 		<link href="styles/style.css" rel="stylesheet" type="text/css">
 	</head>
 	<body>
+		<p>This is the link to <a href="folder/free-use.html">folder/free-use.html</a> page.</p>
 		<h1>Mozilla is cool</h1>
 		<img src="images/firefox-icon.png" alt="The FRirefox logo: a flaming fox surrounding the Earth.">
 
