--- a/folder/free-use.html
+++ b/folder/free-use.html
@@ -5,6 +5,7 @@
     <title>Multiple format video and audio example</title>
   </head>
   <body>
+    <p>This is the link to <a href="../index.html">index.html</a> page.</p>
     <figure>
       <figcaption>
         <h2>Below is a video of my keybaoed that will play in all modern browsers.</h2>
