--- a/folder/free-use.html
+++ b/folder/free-use.html
@@ -10,7 +10,7 @@
       <figcaption>
         <h2>Below is a video of my keybaoed that will play in all modern browsers.</h2>
       </figcaption>
-      <video controls width="500" poster="poster-keyboard.png" preload="metadata">
+      <video controls width="500" poster="poster-keyboard.png" preload="auto">
         <source src="keyboard.mp4" type="video/mp4">
         <source src="keybaord.webm" type="video/webm">
         <track kind="subtitles" srclang="en" src="keyboard.vtt">
