--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 	</head>
 	<body>
 		<p>This is the link to <a href="folder/free-use.html">folder/free-use.html</a> page.</p>
+		<p><a href="mozilla_splash_page/index.html">Link to Mozilla splash page</a></p>
 		<h1>Mozilla is cool</h1>
 		<img src="images/firefox-icon.png" alt="The FRirefox logo: a flaming fox surrounding the Earth.">
 
