--- a/mozilla_splash_page/index.html
+++ b/mozilla_splash_page/index.html
@@ -151,8 +151,8 @@
       <div class="red-panda">
         <!-- insert picture element -->
         <picture>
-          <source>
-          <source>
+          <source media="(max-width: 600px)" srcset="redpanda600.jpg">
+          <source media="(min-width: 601px)" secset="redpanda1200.jpg">
           <img src="redpanda1200.jpg" alt="A red pand on a top of a tree stump.">
         </picture>
       </div>
